dysnomia-wiki/dysnomia-wiki-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dysnomia-wiki
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dysnomia-wiki
