dysnomia-wiki/dysnomia-wiki-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dysnomia-wiki-ingressroute
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`wiki.dysnomia.studio`)
    kind: Rule
    services:
    - name: dysnomia-wiki
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: dysnomia-wiki-tls-secret
